crates/vise/tests/ui/metrics/bogus_unit.stderr
error[E0308]: mismatched types
 --> tests/ui/metrics/bogus_unit.rs:6:22
  |
3 | #[derive(Debug, Metrics)]
  |                 ------- arguments to this enum variant are incorrect
...
6 |     #[metrics(unit = "seconds")]
  |                      ^^^^^^^^^ expected `Unit`, found `&str`
  |
help: the type constructed contains `&'static str` due to the type of the argument passed
 --> tests/ui/metrics/bogus_unit.rs:3:17
  |
3 | #[derive(Debug, Metrics)]
  |                 ^^^^^^^
...
6 |     #[metrics(unit = "seconds")]
  |                      --------- this argument influences the type of `core`
note: tuple variant defined here
 --> $RUST/core/src/option.rs
  |
  |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
  |     ^^^^
  = note: this error originates in the derive macro `Metrics` (in Nightly builds, run with -Z macro-backtrace for more info)
